error.log
There are files that need to be downloaded in order to be unit tested.
There are files that need to be downloaded in order to be unit tested.
C:\Users\Matt\Documents\NetBeansProjects\DropboxGrader\downloads\P2_MattLyons_50_JUnitTest\TestApp\TestMethods.java:55: error: method main(String[]) is already defined in class TestMethods
public static void main(String[] args){System.out.println(test(hi));}
                   ^
C:\Users\Matt\Documents\NetBeansProjects\DropboxGrader\downloads\P2_MattLyons_50_JUnitTest\TestApp\TestMethods.java:55: error: cannot find symbol
public static void main(String[] args){System.out.println(test(hi));}
                                                               ^
  symbol:   variable hi
  location: class TestMethods
2 errors
